# lexipath

./: .ci-trigger-v0104  .gitignore  Cargo.toml  README.md
assets/: blog-entry.json  bored-entry.json  cd-entry.json  dvd-entry.json  girlfriend-entry.json  online-entry.json  planning-entry.json  significantly-entry.json  site-entry.json  thanks-entry.json  theatre-entry.json
docs/: .ipa-normalization-trigger  AI_COURSE_REVIEW.md  AI_STORY_AUTHORING.md  COURSE_RULES.md  DATA_SOURCES.md  EXAMPLE_TRANSLATION_MAINTENANCE.md  LLM_READING_MAINTENANCE.md  WHOLE_BANK_FREEZE.md  ipa-normalization.md
src/: app.rs  app_v2.rs  audio.rs  catalog.rs  catalog_context_repairs.rs  catalog_core_meanings.rs  catalog_daily.rs  catalog_example_translations.rs  catalog_final_freeze_templates.rs  catalog_final_review_templates.rs  catalog_formalize.rs  catalog_function_templates.rs  catalog_import.rs  catalog_load.rs  catalog_meaning.rs  catalog_polish.rs  catalog_quality.rs  catalog_repair.rs  catalog_reviewed_a1_templates.rs  catalog_reviewed_a2_templates.rs  catalog_reviewed_b1_templates.rs  catalog_reviewed_b2_templates.rs  catalog_reviewed_stage_apply.rs  catalog_reviewed_stage_templates.rs  catalog_semantic_templates.rs  catalog_stories.rs  catalog_template_apply.rs  catalog_template_overrides.rs  controlled_english.rs  course.rs  course_finalize.rs  course_finalize_file.rs  daily_gate.rs  display_text.rs  embedded_course.rs  engine.rs  fonts.rs  ipa_app.rs  main.rs  phonetics.rs  (+21 more)
tools/: ai_course_review.py  example_translation_review_bank.py  export_example_translation_review.py  (+3 more)
(+89 files in other folders)
