[package]
name = "lexipath"
version = "0.1.0"
edition = "2021"
description = "A fixed-path English learning desktop application"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
